--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -59,26 +59,30 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-        </aside>
-
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
+            <h2 class="asidetitle">Jupiter</h2>
         </aside>
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Earth</h1>
+        <h1 class="bigpageheader">Jupiter</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter" width="240" height="240">
+                    <p class="caption">Jupiter</p>
+                </div>
+                <p class="paragraph">
+                    Jupiter is the largest planet in the Solar System and a gas giant. 
+                    It bears the name of the king of gods and god of the sky in Roman mythology. 
+                    The most recognisable feature is the storm, known as Great Red Spot. 
+                    It has a faint ring and at least 80 moons, the four main ones being Ganymede, Callisto, Io and Europe. 
+                    Ganymede is also the biggest satellite in the Solar System, bigger than the planet Mercury.
+                </p>
+            </div>
         </section>
 
         <!--A footer-->
