--- a/pages/mars.html
+++ b/pages/mars.html
@@ -59,26 +59,32 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-        </aside>
-
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
+            <h2 class="asidetitle">Mars</h2>
         </aside>
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Earth</h1>
+        <h1 class="bigpageheader">Mars</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars" width="240" height="240">
+                    <p class="caption">Mars</p>
+                </div>
+                <p class="paragraph">
+                    Mars is the fourth planet in the Solar System. 
+                    It is smaller than Venus and larger than Mercury. 
+                    Mars is named after the Roman god of war. 
+                    Volcanism exists on Mars - the highest known mountain in the Solar System is Olympus Mons - 21,229 m. 
+                    Craters are mostly concentrated in the south, where the surface is older. 
+                    There is ice on Mars and evidences show that liquid water might have existed on the Martian surface, but is currently impossible, due to the low athmospheric pressure. 
+                    There are two satellites orbiting around Mars - Phobos and Deimos.
+                </p>
+            </div>
         </section>
 
         <!--A footer-->
