--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -59,26 +59,29 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-        </aside>
-
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
+            <h2 class="asidetitle">Mercury</h2>
         </aside>
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Earth</h1>
+        <h1 class="bigpageheader">Mercury</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury" width="242" height="240">
+                    <p class="caption">Mercury</p>
+                </div>
+                <p class="paragraph">
+                    Mercury is the smallest and closest to the Sun of the eight planets. 
+                    It is named after the Roman god of commerce and the messenger of the gods. 
+                    The planet's surface is covered with craters and is too hot for an athmosphere to form. 
+                    There are also evidence of ice water at the poles.
+                </p>
+            </div>
         </section>
 
         <!--A footer-->
