--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -99,15 +99,6 @@
             </ul>
         </aside>
 
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-        </aside>
-
         <!--Title on the main page-->
 
         <h1 class="bigpageheader">Natural satellite</h1>
@@ -248,7 +239,9 @@
                 </div>
                 <h3 class="paragraphsubheader" id="SatellitesOfNeptune">Satellites of Neptune</h3>
                 <p class="paragraph">
-                    There are 14 known <a href="neptune.html">Neptunian</a> satellites, named after Greek water deities. The biggest satellite - Triton, is believed to be a dwarf planet caught by the gravitation of Neptune. </p>
+                    There are 14 known <a href="neptune.html">Neptunian</a> satellites, named after Greek water deities. 
+                    The biggest satellite - Triton, is believed to be a dwarf planet caught by the gravitation of Neptune.
+                </p>
             </div>
             <div class="articlediv">
                 <div class="captionbox right">
