--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -59,26 +59,188 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-        </aside>
-
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
+            <h2 class="asidetitle">Neptune</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#Name">Name</a>
+                </li>
+                <li>
+                    <a href="#Discovery">Discovery</a>
+                </li>
+                <li>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Size">Size</a>
+                        </li>
+                        <li>
+                            <a href="#InternalStructureAndAtmosphere">Internal structure and atmosphere</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Climate">Climate</a>
+                </li>
+                <li>
+                    <a href="#Satellites">Satellites</a>
+                </li>
+                <li>
+                    <a href="#Exploration">Exploration</a>
+                </li>
+            </ul>
         </aside>
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Earth</h1>
+        <h1 class="bigpageheader">Neptune</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune" width="240" height="240">
+                    <p class="caption">Neptune as seen by Voyager 2, 1989</p>
+                </div>
+                <p class="paragraph">
+                    Neptune is the eight <a href="planet.html">planet</a> from the Sun in the Solar System. 
+                    It is the fourth biggest planet in the Solar System, and one of two ice giants, the other being i<a href="uranus.html">Uranus</a>.
+                    Neptune orbits the Sun once every 164.8 years at an average distance of 30.1 AU from it.
+                    It is named after the Roman sea god, the equivalent of the Greek Poseidon. 
+                </p>
+                <p class="paragraph">
+                    The unexplained deviations from the expected orbit of Uranus lead to speculations about the existence of an eight planet.
+                    Thus Neptune was discovered in 1846 by Johann Galle. 
+                    It is not visible to the naked eye and was discovered by mathematical predictions. 
+                    The biggest Neptunian satellite - Triton was found shortly after and the other 13 we know of today were located until the next century.
+                    Neptune has been visited by Voyager 2 in 1989.
+                </p>
+                <p class="paragraph">
+                    The atmosphere of Neptune is composed of hydrogen and helium, but unlike <a href="jupiter.html">Jupiter</a> and <a href="saturn.html">Saturn</a>, it has a higher amount of ices such as water, methane and ammonia.
+                    This distinction makes Neptune an ice giant like Uranus.
+                    Neptune has a more active atmosphere than that of Uranus and has more features.
+                    One such weather phenomena was the Great Dark Spot, similar to the Great Red Spot of Jupiter, observed by Voyager 2. 
+                    It has since disappeared, although smaller dark spots are now seen by the Hubble Space Telescope.
+                    Neptune also has a ring system like the other giants.
+                    The rings are faint and consist of dust.
+                </p>
+            </div>
+            <h2 class="paragraphheader" id="Name">Name</h2>
+            <p class="paragraph">
+                Neptune is named after the Roman sea god Neptune (Neptunus in Latin). 
+                The name was chosen by Urbain Le Verrier, who predicted the location of the planet.
+            </p>
+            <p class="paragraph">
+                In Greek the planet is named "Poseidonas"(Ποσειδώνας) after the Greek counterpart of Neptune - Poseidon. 
+                Other languages that call the planet after a water deity are Hindi, calling it "Varun" (वरुण) after Varuna, Māori, calling the planet "Tangaroa" and Nahuatl, naming it "Tlāloccītlalli" after the rain god Tlāloc.
+                In Hebrew, the planet was given the name "Rahab" (רהב) after a Biblical sea monster.
+                In Chinese, Japanese, Vietnamese and Korean, the planet can be translated as "ocean king star" (海王星 in Mandarin).
+                A similar name is the Mongolian "Dalain van" (Далайн ван, literally "sea king").
+            </p>
+            <h2 class="paragraphheader" id="Discovery">Discovery</h2>
+            <p class="paragraph">
+                The planet <a href="uranus.html">Uranus</a> was discovered by William Herschel in 1781, but it's orbit couldn't be explained by Newton's law of universal gravitation.
+                Astronomers were hypothesising an eight planet affecting the path of Uranus.
+                The french mathematician Urbain Le Verrier calculated the coordinates of the mysterious planet in 1846.
+                At the Berlin Observatory, the german Johannes Galle worked on Le Verre's predictions and on the night of September 23–24 the same year, he discovered the planet.
+            </p>
+            <p class="paragraph">
+                Neptune has been observed before, but was not recognised as a planet.
+                Galileo was the first to notice the existence of Neptune, but it was in retrograde at the time of observing, so he mistook it for a star.
+                John Herschel, son of William Herschel also has observed Neptune in 1830 and although the planet would have appeared as a small blue disc, he also thought it was a star.
+            </p>
+            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+            <p class="paragraph">
+                Neptune is the farthest planet from the Sun at 30.1 AU.
+                It takes Neptune an average of 164.79 years to complete an orbit.
+                The perihelion distance is 29.81 AU and the aphelion distance is 30.33 AU.
+                The elliptical orbit of Neptune is inclined 1.77° in relation to that of Earth. 
+            </p>
+            <p class="paragraph">
+                Since Neptune is made of gas, the planet rotates differentially.
+                At the Equator, the atmosphere rotates with a period of 18 hours, whereas the poles have a rotational period of 12 hours.
+                The axial tilt is 28.32°, similar to that of Earth.
+            </p>
+            <p class="paragraph">
+                There are many objects that are farther from the Sun than Neptune, called <a href="tno.html">trans-Neptunian objects</a>.
+                Part of those objects that have a low eccentricity make up the Kuiper belt.
+                Kuiper belt are split into classical (cubewanos) and resonant.
+                The resonant KBOs are in a resonance with Neptune - 1:2 (twotinos), 2:3 (plutinos), 3:4, 3:5, 4:7 or 2:5.
+                Pluto, the largest dwarf planet, is a plutino and because of it's resonance with Neptune, it would not collide despite crossing the Neptunian orbit.
+            </p>
+            <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+            <h3 class="paragraphsubheader" id="Size">Size</h3>
+            <p class="paragraph">
+                Neptune has a mass of 1.0243×10^26 kg - it is 17 times the mass of <a href="earth.html">Earth</a> but only 1/19th that of Jupiter. 
+                Neptune's equatorial radius is nearly four times that of Earth.
+                Like <a href="uranus.html">Uranus</a>, Neptune is an ice giant, because it has higher concentrations of volatiles (ices) than <a href="jupiter.html">Jupiter</a> and <a href="saturn.html">Saturn</a>. 
+                <a href="exoplanet.html">Exoplanets</a> with a similar size are refered to as "Neptunes".
+            </p>
+            <h3 class="paragraphsubheader" id="InternalStructureAndAtmosphere">Internal structure and atmosphere</h3>
+                Neptune has a similar structure to that of Uranus.
+                The atmosphere at high altitudes consists of 80% hydrogen and 19% helium, with trace amounts of methane.
+                It is the methane that gives the blue color of Neptune.
+                At lower levels, the amount of volatiles like water, methane and ammonia increases.
+                The atmosphere is divided into a troposphere, a stratosphere, a thermosphere and an exosphere.
+                Clouds vary in composition based on altitude - methane clouds are highest in the atmosphere, followed by hydrogen sulfide clouds between one and five bars, ammonia clouds over five bars and water clouds deep in the atmosphere.
+            </p>
+            <p class="paragraph">
+                The Neptunian mantle is made of ices at a state of critical fluids.
+                Water molecules break down into hydrogen and oxygen ions and rains of diamonds are formed from methane under the high pressure
+                The core is likely a supercritical fluid mix of iron, nickel and silicates, 1.2 times more massive than Earth.
+            <h2 class="paragraphheader" id="Climate">Climate</h2>
+            <p class="paragraph">
+                Neptune weather is more intense than that on Uranus, due to higher internal heating.
+                Winds on Neptune are very dynamic and can reach supersonic speed.
+                More precicely, wind speeds vary between 20 m/s in the easterly direction to 325 m/s westward, with high altitude clouds exceeding 400 m/s.
+                The long orbital period of Neptune causes seasons to last for years.
+                This leads to effects like higher temperatures at one the poles that is facing the Sun.
+            </p>
+            <p class="paragraph">
+                First seen during the Voyager 2 flyby, The Great Dark Spot was a storm similar to Jupiter's Great Red Spot.
+                When Hubble Space Telescope observed Neptune five years later, the storm did not appear.
+                Such storms form regularly and last for months, more recently, in 2018, two storms were spotted in the northern hemisphere.
+                It is believed that these vortexes form in the troposphere.
+            </p>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton" width="240" height="240">
+                    <p class="caption">Triton, the largest Neptunian satellite</p>
+                </div>
+                <h2 class="paragraphheader" id="Satellites">Satellites</h2>
+                <p class="paragraph">
+                    There are 14 known <a href="neptune.html">Neptunian</a> satellites, all named after Greek water deities. 
+                    The biggest satellite - Triton was discovered just 17 years after the discovery of Neptune. 
+                    It is believed to be a dwarf planet caught by the gravitation of Neptune, because of it's retrograde orbit. 
+                </p>
+                <p class="paragraph">
+                    All of the other satellites have an irregular shape.
+                    The second discovered moon, Nereid, is an irregular moon with a high 0.7512 eccentricity and a apoapsis seven times the periapsis.
+                    More moons were discovered by Voyager 2.
+                    The biggest of them is Proteus, whis is the biggest we know of with an irregular shape, larger than Saturn's Mimas, which is round.
+                    Naiad, Thalassa, Despina and Galatea are within the rings of Neptune.
+                    Larissa was the last discovered in 1989.
+                    Since then six more moons were discovered in 2003, 2004 and 2013.
+                </p>
+                <p class="paragraph">
+                    Neptune has five rings. 
+                    They are faint and composed of dust, similar to those of Jupiter.
+                    The five rings bear the names of scientist that played a role in the discovery and observation of Neptune - Galle, Le Verrier, Lassell, Arago, and Adams.
+                </p>
+            </div>
+            <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+            <p class="paragraph">
+               Voyager 2 was the only spacecraft to visit Neptune.
+               After a flyby of Saturn and Uranus, Neptune was the next potential objet to be visited.
+               Voyager 2 reached Neptune on 25 August 1989.
+               The spacecraft observed Neptune's atmosphere, rings, magnetosphere and moons. 
+               Since the visit, Voyager 2 has left the Solar System.
+               Multiple new missions were proposed, but none are yet approved.
+            </p>
         </section>
 
         <!--A footer-->
