--- a/pages/planet.html
+++ b/pages/planet.html
@@ -102,15 +102,6 @@
             </ul>
         </aside>
 
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-        </aside>
-
         <!--Title on the main page-->
 
         <h1 class="bigpageheader">Planet</h1>
@@ -284,7 +275,7 @@
                 <p class="paragraph">
                     The smallest giant, Neptune is the last planet in the Solar System. 
                     It is named after the Roman sea god. 
-                    It has a ring system and a Great Dark Spot, similar to the Great Red Spot of Jupiter. 
+                    It has a ring system and had a Great Dark Spot, similar to the Great Red Spot of Jupiter. 
                     There are 14 known satellites, named after Greek water deities. 
                     The biggest satellite - Triton, is believed to be a dwarf planet caught by the gravitation of Neptune.
                 </p>
