--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -59,26 +59,31 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-        </aside>
-
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
+            <h2 class="asidetitle">Saturn</h2>
         </aside>
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Earth</h1>
+        <h1 class="bigpageheader">Saturn</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn" width="320" height="164">
+                    <p class="caption">Saturn</p>
+                </div>
+                <p class="paragraph">
+                    Saturn is the second largest of the eight planets in the Solar System. 
+                    In Roman mythology, Saturn is the god of time and wealth. 
+                    Saturn is known for it's prominent rings. 
+                    It is visibly flattened at the poles and features a hexagonal cloud at the north pole. 
+                    83 known satellites exist, 53 of them are named. 
+                    The biggest of those moons are Titan, which is bigger than Mercury, Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+                </p>
+            </div>
         </section>
 
         <!--A footer-->
