--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -59,26 +59,33 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-        </aside>
-
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
+            <h2 class="asidetitle">Uranus</h2>
         </aside>
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Earth</h1>
+        <h1 class="bigpageheader">Uranus</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus" width="240" height="240">
+                    <p class="caption">Uranus</p>
+                </div>
+                <p class="paragraph">
+                    Uranus is the seventh planet in the Solar System. 
+                    It is the third biggest planet in the Solar System. 
+                    It is named after the Greek god, who represents the sky. 
+                    Uranus, just like the other ice giant Neptune, consists of volatiles (ices), whereas the gas giants are mostly made up of hydrogen and helium. 
+                    Just like the other giants, Uranus has a ring system. 
+                    Its axis of rotation is tilted sideways, nearly into the plane of its solar orbit. 
+                    27 moons are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                    The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.
+                </p>
+            </div>
         </section>
 
         <!--A footer-->
