--- a/pages/venus.html
+++ b/pages/venus.html
@@ -59,26 +59,31 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Earth</h2>
-        </aside>
-
-        <aside class="asideright">
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
-            <div class="sidediv">
-                <p>something will be here</p>
-            </div>
+            <h2 class="asidetitle">Venus</h2>
         </aside>
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Earth</h1>
+        <h1 class="bigpageheader">Venus</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus" width="240" height="240">
+                    <p class="caption">Venus</p>
+                </div>
+                <p class="paragraph">
+                    Venus is the second planet in the Solar System from the Sun.
+                    It is slightly smaller than Earth.
+                    It is named after the Roman goddes of love and beauty. 
+                    It is the brightest of the planets on the Earth sky. 
+                    The Venerian surface has a higher temperature than Mercury, due to the greenhouse effect caused by the carbon dioxide-rich athmosphere. 
+                    The surface is shaped by volcanism and craters.
+                </p>
+            </div>
         </section>
 
         <!--A footer-->
