--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -60,6 +60,31 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Mercury</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#Name">Name</a>
+                </li>
+                <li>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Size">Size</a>
+                        </li>
+                        <li>
+                            <a href="#InternalStructure">Internal structure</a>
+                        </li>
+                        <li>
+                            <a href="#ExternalStructure">External structure</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Exploration">Exploration</a>
+                </li>
+            </ul>
         </aside>
 
         <!--Title on the main page-->
@@ -73,13 +98,89 @@
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury" width="242" height="240">
-                    <p class="caption">Mercury</p>
+                    <p class="caption">Mercury seen from MESSENGER</p>
                 </div>
                 <p class="paragraph">
-                    Mercury is the smallest and closest to the Sun of the eight planets. 
+                    Mercury is the smallest and closest <a href="planet.html">planet</a> to the Sun in the Solar System. 
+                    Mercury is an inferior planet to <a href="earth.html">Earth</a> and similarly to <a href="venus.html">Venus</a>, it can only be seen as a morning or an evening "star" in the Earth sky.
                     It is named after the Roman god of commerce and the messenger of the gods. 
-                    The planet's surface is covered with craters and is too hot for an athmosphere to form. 
-                    There are also evidence of ice water at the poles.
+                </p>
+                <p class="paragraph">
+                    Mercury is so close to the sun that it rotates in a 3:2 spin-orbit resonance with the Sun.
+                    This also means that one Mercurian day takes two revolutions around the Sun.
+                    It has the smallest axial tilt of all planets in the Solar System at 0° 2'.
+                </p>
+                <p class="paragraph">
+                    The planet's surface is covered with craters and has no atmosphere. 
+                    The temperatures on Mercury range from 100 K to 700 K.
+                    There are also evidence of some ice water at the poles.
+                    Mercury has no natural satellites.
+                </p>
+                <p class="paragraph">
+                    Two spacecrafts have visited Mercury - Mariner 10 and MESSENGER and a third - BepiColombo is an ongoing mission.
+                </p>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                    The planet was known since ancient times and had different names as a morning and an evening star.
+                    The ancient Greeks had realised that the two are a single object.
+                    It was named after Hermes, the swift-footed messenger god, for it's fast movement across the sky.
+                    The Romans gave it the name "Mercurius", which is the name of Hermes' analogue in Roman mythology.
+                </p>
+                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                <p class="paragraph">
+                    Mercury has a 3:2 spin-orbit resonance in relation to the fixed <a href="star.html">stars</a>.
+                    One Mercury solar day thus equates to two Mercury years.
+                    In Earth days, one synodic day is almost 176 Earth days, which is three times the sidereal day and the orbital period is 88 days.
+                    Mercury has a very low axial tilt of 1/30 degrees.
+                </p>
+                <p class="paragraph">
+                    Mercury has the highest eccentricity of the planets in the Solar System at 0.21.
+                    The perihelion is 0.307 AU and the aphelion is 0.466 AU.
+                </p>
+                <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+                <h3 class="paragraphsubheader" id="Size">Size</h3>
+                <p class="paragraph">
+                    Mercury is the smallest planet in the Solar system.
+                    It has an equatorial radius of 2,440 km.
+                    Two natural satellites in the Solar System, Ganymede and Titan, are more massive than Mercury, but have a small mass.
+                </p>
+                <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+                <p class="paragraph">
+                    Mercury is a terrestrial planet, consisting of 30% silicates and 70% metallic material.
+                    The crust and the mantle are mostly silicates, while the core consists of iron sulfide outside, liquid iron in the middle and solid iron inside.
+                    The high amount of iron makes Mercury the second densest planet after <a href="earth.html">Earth</a>.
+                </p>
+                <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
+                <p class="paragraph">
+                    Mercury has a similar surface to that of the Moon, full of craters and plains (mare).
+                    The largest crater is the 1550 km wide Caloris Basin, which is surrounded by a 2 km tall concentric ring.
+                    The antipode of Caloris is a hilly terrain, likely created from the impact.
+                    More recent crater feature ray systems.
+                </p>
+                <p class="paragraph">
+                    At the poles, ice remains inside craters can be spotted, where shadows keep them from melting.
+                    The ice was most likely brought by comets.
+                </p>
+                <p class="paragraph">
+                    Mercury is not volcanically active.
+                    Despite this evidence for pyroclastic flows can be spotted near low-lying shield volcanoes, implying Mercury used to have volcanism.
+                </p>
+                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                <p class="paragraph">
+                    Two missions have taken place and one is currently ongoing.
+                    NASA's Mariner 10 was the first in 1974.
+                    The mission objectives were to measure Mercury's environment, atmosphere, surface, and body characteristics.
+                    It was the first mission to perform multiple planetary flybys.
+                </p>
+                <p class="paragraph">
+                    MESSENGER was NASA's second mission in 2011.
+                    Unlike Mariner 10, MESSENGER enterer Mercury's orbit.
+                    The objectives were to explain Mercury's high density, geological history, nature of its magnetic field and structure of its core.
+                </p>
+                <p class="paragraph">
+                    An ongoing mission between ESA and JAXA, called BepiColombo was launched in 2018.
+                    It is planned to get into Mercury orbit in 2025.
+                    Two probes will be released to study the planet.
                 </p>
             </div>
         </section>
