--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -108,7 +108,7 @@
                 </div>
                 <p class="paragraph">
                     Neptune is the eight <a href="planet.html">planet</a> from the Sun in the Solar System. 
-                    It is the fourth biggest planet in the Solar System, and one of two ice giants, the other being i<a href="uranus.html">Uranus</a>.
+                    It is the fourth biggest planet in the Solar System, and one of two ice giants, the other being <a href="uranus.html">Uranus</a>.
                     Neptune orbits the Sun once every 164.8 years at an average distance of 30.1 AU from it.
                     It is named after the Roman sea god, the equivalent of the Greek Poseidon. 
                 </p>
