--- a/pages/planet.html
+++ b/pages/planet.html
@@ -3,11 +3,10 @@
     <head>
         <link rel="stylesheet" href="../assets/style.css">
         <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Gabrova</title>
+        <title>Planet - Gabrova</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="Geography of the planets">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
     </head>
     <body>
@@ -17,7 +16,7 @@
         <nav>
             <ul class="navigationmenu">
                 <li class=navlogo>
-                    <img src="logo.png" alt="LOGO">
+                    <img src="../assets/logo.png" alt="LOGO">
                 </li>
                 <li class="navbutton">
                     <a class="navlink" href="../index.html">Home</a>
@@ -48,7 +47,7 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">Services</a>
+                    <a class="navlink">About</a>
                 </li>
                 <li class="navbutton">
                     <a class="navlink">News</a>
@@ -124,7 +123,7 @@
             <p class="paragraph">
                 Other objects used to be considered planets, but were later considered as completely different bodies. 
                 For example, the Sun was considered a planet orbiting the Earth, but was later discovered that it is a star. 
-                The <a href="natural-satellite.html">satellites</a> of planets like Earth's Moon, or the Jovian, Cronian, Uranian and Neptunian moons were also considered planets for some time.
+                The <a href="natural-satellite.html">satellites</a> of planets like Earth's Moon, or the Jovian, Saturnian, Uranian and Neptunian moons were also considered planets for some time.
             </p>
             <p class="paragraph">
                 The same can be said for the asteroids in the <a href="asteroid-belt.html">Asteroid Belti</a>, or objects like Pluto. 
@@ -312,7 +311,7 @@
         <!--A footer-->
 
         <footer>
-            <p>something will be here</p>
+            <p>Gabrova</p>
         </footer>
     </body>
 </html>
