--- a/pages/tno.html
+++ b/pages/tno.html
@@ -3,11 +3,10 @@
     <head>
         <link rel="stylesheet" href="../assets/style.css">
         <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-        <title>Gabrova</title>
+        <title>Trans-Neptunian object - Gabrova</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="Geography of the planets">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="keywords" content="gabrova, asteroid, space, solar system, planet, exoplanet, moon, dwarf planet, geography">
     </head>
     <body>
@@ -17,7 +16,7 @@
         <nav>
             <ul class="navigationmenu">
                 <li class=navlogo>
-                    <img src="logo.png" alt="LOGO">
+                    <img src="../assets/logo.png" alt="LOGO">
                 </li>
                 <li class="navbutton">
                     <a class="navlink" href="../index.html">Home</a>
@@ -48,7 +47,7 @@
                     </div>
                 </li>
                 <li class="navbutton">
-                    <a class="navlink">Services</a>
+                    <a class="navlink">About</a>
                 </li>
                 <li class="navbutton">
                     <a class="navlink">News</a>
@@ -59,7 +58,7 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Trans-Neptunian objects</h2>
+            <h2 class="asidetitle">Trans-Neptunian object</h2>
             <ul class="toc">
                 <li>
                     <a href="#Discovery">Discovery</a>
@@ -94,7 +93,7 @@
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Trans-Neptunian objects</h1>
+        <h1 class="bigpageheader">Trans-Neptunian object</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
@@ -183,7 +182,7 @@
         <!--A footer-->
 
         <footer>
-            <p>something will be here</p>
+            <p>Gabrova</p>
         </footer>
     </body>
 </html>
